[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-openpublictransport"
version = "0.1.14"
description = "Python library for public transport APIs (EFA, OTP2, TRIAS, FPTF, HAFAS, GTFS-RT)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "gtfs-realtime-bindings>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openpublictransport = ["py.typed", "data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
